fix(styling): Fix table styling
Changes table layout on plugin / extension pages so it no longer overflows main body

Also adds mobile styling for tables

--- a/app/_assets/css/hub.css
+++ b/app/_assets/css/hub.css
@@ -7810,7 +7810,7 @@ a.bg-inverse:focus,a.bg-inverse:hover {
 }
 
 .text-right {
-    text-align: right!important
+    !important
 }
 
 .text-center {
