--- a/app/_assets/stylesheets/pages/extension.less
+++ b/app/_assets/stylesheets/pages/extension.less
@@ -42,22 +42,6 @@
       font-size: 17px;
     }
 
-    table {
-      font-size: 13px;
-
-      th {
-        padding: 8px 15px;
-      }
-
-      th {
-        .font-source-sans-sc();
-      }
-
-      td {
-        padding: 15px;
-      }
-    }
-
     h2, h4, p, table, .highlight {
       margin: 0 0 2.5rem 0;
     }
